Upadte routes for user profile pic handling. Due to being logged in anyways, we dont have to pass the userId through the file which would be less secure
